--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,12 @@
   "description": "Verifies",
   "type": "symfony-bundle",
   "require": {
-    "php":  "^7.4 || ^8.0|| ^8.1",
+    "php":  " ^8.0|| ^8.1|| ^8.2",
     "ext-openssl": "*",
     "ext-json": "*",
-    "symfony/config": "^4.4 || ^5.3 || ^6.0",
-    "symfony/dependency-injection": "^4.4 || ^5.3 || ^6.0",
-    "symfony/http-kernel": "^4.4 || ^5.3 || ^6.0"
+    "symfony/config": "^6.0 || ^7.0",
+    "symfony/dependency-injection": "^6.0 || ^7.0",
+    "symfony/http-kernel": "^6.0 || ^7.0"
   },
   "autoload": {
     "psr-4": {
